[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-triage-env"
version = "1.0.0"
description = "Healthcare AI training environment for clinical decision-making agents (Emergency Triage, Medication Safety, Sepsis Management)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "healthcare",
    "clinical-decision-support",
    "triage",
    "medication-safety",
    "sepsis",
    "openenv",
    "rl-training",
    "agentic-ai",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "websockets>=12.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.20.0",
    "openai>=1.10.0",
]
server = [
    "reportlab>=4.0.8",
]
all = [
    "anthropic>=0.20.0",
    "openai>=1.10.0",
    "reportlab>=4.0.8",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/samrudh-nux/ClinicalTriageEnv"
Repository = "https://huggingface.co/spaces/samrudh-nux/ClinicalTriageEnv"
Documentation = "https://huggingface.co/spaces/samrudh-nux/ClinicalTriageEnv"

[tool.setuptools.packages.find]
where = ["."]
include = ["clinical_triage_env*"]
exclude = ["tests*", "outputs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
